Fixed a visual bug where the header was too long in the results page

--- a/AtlantaFoodFinder/AtlantaFoodFinder/static/AtlantaFoodFinder/results.css
+++ b/AtlantaFoodFinder/AtlantaFoodFinder/static/AtlantaFoodFinder/results.css
@@ -56,7 +56,7 @@ nav .nav-links li a:hover {
     border: none;
     list-style: none;
     display: flex;
-    gap: 0px;
+    gap: 80px;
     color: #fff;
     text-decoration: none;
     font-size: 30px;
@@ -186,14 +186,6 @@ main {
 
 #distance {
     color: #777;
-}
-
-li {
-    list-style: none;
-    font-size: 18px;
-    color: #888;
-    text-align: center;
-    margin-top: 20px;
 }
 
 @media (max-width: 768px) {
